--- a/index.html
+++ b/index.html
@@ -88,9 +88,8 @@
                         de la pizza Professeur">
                     <div class="legende">
                         <h4>PROFESSEUR</h4>
-                        <p class="ingredients">Ingrédients :</p>
-                        <p class="listeingredients">Sauce tomate, mozarella,
-                            buratta, speck, roquette.</p>
+                        <p class="ingredients">INGRÉDIENTS </p>
+                        <p class="listeingredients">Sauce tomate et mozarella.</p>
                     </div>
                 </div>
             </div>
@@ -100,9 +99,8 @@
                         de la pizza Tokyo">
                     <div class="legende">
                         <h4>TOKYO</h4>
-                        <p class="ingredients">Ingrédients :</p>
-                        <p class="listeingredients">Sauce tomate, mozarella,
-                            jambon, sauce piquante, merguez.</p>
+                        <p class="ingredients">INGRÉDIENTS </p>
+                        <p class="listeingredients">Sauce tomate, pepperoni et mozarella</p>
                     </div>
                 </div>
             </div>
@@ -112,9 +110,9 @@
                         de la pizza Lisbonne">
                     <div class="legende">
                         <h4>LISBONNE</h4>
-                        <p class="ingredients">Ingrédients :</p>
-                        <p class="listeingredients">Sauce tomate, mozarella,
-                            buratta, speck, roquette.</p>
+                        <p class="ingredients">INGRÉDIENTS </p>
+                        <p class="listeingredients">Sauce tomate, olives noires, chorizo,
+                            basilic, roquette, buratta et mozarella. .</p>
                     </div>
                 </div>
             </div>
@@ -124,9 +122,9 @@
                         de la pizza Berlin">
                     <div class="legende">
                         <h4>BERLIN</h4>
-                        <p class="ingredients">Ingrédients :</p>
-                        <p class="listeingredients">Sauce tomate, mozarella,
-                            buratta, speck, roquette.</p>
+                        <p class="ingredients">INGRÉDIENTS </p>
+                        <p class="listeingredients">Crême fraiche, jambon blanc,
+                            champignons de Paris, mozzarella.</p>
                     </div>
                 </div>
             </div>
@@ -136,9 +134,9 @@
                         de la pizza Rio">
                     <div class="legende">
                         <h4>RIO</h4>
-                        <p class="ingredients">Ingrédients :</p>
-                        <p class="listeingredients">Sauce tomate, mozarella,
-                            buratta, poulet, ananas.</p>
+                        <p class="ingredients">INGRÉDIENTS </p>
+                        <p class="listeingredients">Sauce tomate, jambon de Paris,
+                            ananas et mozarella </p>
                     </div>
                 </div>
             </div>
@@ -148,10 +146,9 @@
                         de la pizza Nairobi">
                     <div class="legende">
                         <h4>NAIROBI</h4>
-                        <p class="ingredients">Ingrédients :</p>
-                        <p class="listeingredients">Sauce tomate, mozarella,
-                            buratta, speck, sauce piquante, lait de coco,
-                            poulet.</p>
+                        <p class="ingredients">INGRÉDIENTS </p>
+                        <p class="listeingredients">Sauce tomate, parmigiano reggiano,
+                            scamorza fumée et oignons rouges.</p>
                     </div>
                 </div>
             </div>
@@ -165,9 +162,9 @@
                             de la pizza Denver">
                     <div class="legende">
                         <h4>DENVER</h4>
-                        <p class="ingredients">Ingrédients :</p>
-                        <p class="listeingredients">Sauce tomate, mozarella,
-                            buratta, speck, roquette.</p>
+                        <p class="ingredients">INGRÉDIENTS </p>
+                        <p class="listeingredients">Sauce tomate, jambon de Paris, 
+                            pepperoni, tomates cerises et mozzarella.</p>
                     </div>
                 </div>
             </div>
@@ -177,9 +174,9 @@
                             de la pizza Moscou">
                     <div class="legende">
                         <h4>MOSCOU</h4>
-                        <p class="ingredients">Ingrédients :</p>
-                        <p class="listeingredients">Sauce tomate, mozarella,
-                            jambon, sauce piquante, merguez.</p>
+                        <p class="ingredients">INGRÉDIENTS </p>
+                        <p class="listeingredients">Sauce tomate, jambon de Parme,
+                            oeuf, olives vertes et mozzarela.</p>
                     </div>
                 </div>
             </div>
@@ -189,9 +186,8 @@
                             de la pizza Stockholm">
                     <div class="legende">
                         <h4>STOCKHOLM</h4>
-                        <p class="ingredients">Ingrédients :</p>
-                        <p class="listeingredients">Sauce tomate, mozarella,
-                            buratta, speck, roquette.</p>
+                        <p class="ingredients">INGRÉDIENTS </p>
+                        <p class="listeingredients">Sauce tomate, steack haché et mozzarella.</p>
                     </div>
                 </div>
             </div>
@@ -201,9 +197,9 @@
                             de la pizza Palerme">
                     <div class="legende">
                         <h4>PALERME</h4>
-                        <p class="ingredients">Ingrédients :</p>
-                        <p class="listeingredients">Sauce tomate, mozarella,
-                            buratta, speck, roquette.</p>
+                        <p class="ingredients">INGRÉDIENTS </p>
+                        <p class="listeingredients">Sauce tomate, pepperoni,
+                            piment et mozzarella.</p>
                     </div>
                 </div>
             </div>
@@ -213,9 +209,9 @@
                             de la pizza Bogota">
                     <div class="legende">
                         <h4>BOGOTA</h4>
-                        <p class="ingredients">Ingrédients :</p>
-                        <p class="listeingredients">Sauce tomate, mozarella,
-                            buratta, poulet, ananas.</p>
+                        <p class="ingredients">INGRÉDIENTS </p>
+                        <p class="listeingredients">Sauce tomate, Jambon Serrano,
+                            champignons de Paris, oignons, olives noires et mozzarella </p>
                     </div>
                 </div>
             </div>
@@ -225,10 +221,9 @@
                             de la pizza Helsinki">
                     <div class="legende">
                         <h4>HELSINKI</h4>
-                        <p class="ingredients">Ingrédients :</p>
-                        <p class="listeingredients">Sauce tomate, mozarella,
-                            buratta, speck, sauce piquante, lait de coco,
-                            poulet.</p>
+                        <p class="ingredients">INGRÉDIENTS </p>
+                        <p class="listeingredients">Sauce tomate, mesclun, bresaola,
+                            buratta et mozarella,.</p>
                     </div>
                 </div>
             </div>
