--- a/index.html
+++ b/index.html
@@ -78,9 +78,52 @@
             <h2 id="menu">Notre carte</h2>
             <hr>
         </div>
-
-        <h2>NOS PIZZAS CLASSIQUES</h2>
-        <div class="flex-container">
+        <div class="container_unfolding">
+            <h2>NOS PIZZAS CLASSIQUES</h2>
+            <div id="unfolding_classiques" class="unfolding">
+                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                width="552.611px" height="552.611px" viewBox="0 0 552.611 552.611" style="enable-background:new 0 0 552.611 552.611;"
+                xml:space="preserve">
+        <g>
+            <g>
+                <path d="M486.413,221.412L122.347,12.916c-52.938-30.318-95.852-5.44-95.852,55.563v415.652c0,61.004,42.914,85.882,95.852,55.563
+                    l364.066-208.49C539.351,300.887,539.351,251.731,486.413,221.412z"/>
+            </g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+                </svg>
+            </div>
+        </div>
+        <div id="container-classique" class="flex-container">
             <div class="conteneurs">
                 <div id="Professeur">
                     <img class="photoPizza" src="src/Professeur.jpg" alt="photo
@@ -164,10 +207,53 @@
                 </div>
             </div>
         </div>
-
-        <h2>NOS PIZZAS SIGNATURES</h2>
+        <div class="container_unfolding">
+            <h2>NOS PIZZAS SIGNATURES</h2>
+            <div id="unfolding_signatures" class="unfolding">
+                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                width="552.611px" height="552.611px" viewBox="0 0 552.611 552.611" style="enable-background:new 0 0 552.611 552.611;"
+                xml:space="preserve">
+        <g>
+            <g>
+                <path d="M486.413,221.412L122.347,12.916c-52.938-30.318-95.852-5.44-95.852,55.563v415.652c0,61.004,42.914,85.882,95.852,55.563
+                    l364.066-208.49C539.351,300.887,539.351,251.731,486.413,221.412z"/>
+            </g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+                </svg>
+            </div>
+        </div>
         <!--Denver, Moscou, Stockholm, helsinki, palerme, Bogota-->
-        <div class="flex-container">
+        <div id="container-signatures" class="flex-container">
             <div class="conteneurs">
                 <div id="Denver">
                     <img class="photoPizza" src="src/Denver.jpg" alt="photo
