add animation + design form

--- a/index.html
+++ b/index.html
@@ -333,8 +333,7 @@
                 <img id="image-selection" src="src/Elprofessor.jpg" alt="Photo du Professeur">
                 <div id="conteneur-prenom">
                     <div id="prenom"></div>
-                    <button id="button-professeur">Je fais confiance au
-                        Professeur</button>
+                    <button id="button-professeur">Je fais confiance au Professeur</button>
                 </div>
             </div>
 
@@ -385,15 +384,15 @@
 
         <form id="contactForm" method="post" action="">
             <h2>Contactez nous</h2>
-            <label for="lastname">Nom:</label>
+            <label for="lastname">Nom * :</label>
             <input type="text" id="lastName" name="lastName" value="" />
-            <label for="firstname">Prénom:</label>
+            <label for="firstname">Prénom * :</label>
             <input type="text" id="firstName" name="firstName" value="" />
-            <label for="email">Email:</label>
+            <label for="email">Email * :</label>
             <input type="email" id="email" name="email" value="">
-            <label for="message">Message:</label>
+            <label for="message">Message * :</label>
             <textarea id="message" name="message"></textarea>
-            <input id="button" type="submit" value="Submit" />
+            <input id="button" type="submit" value="Envoyer" />
         </form>
     </section>
     <footer>
