Ajout des impacts de balle, et des douilles + correction arriere plan pizza et modif noms + reduc effet survol pizza

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
             <div class="conteneurs">
                 <div id="Tokyo">
-                    <img class="photoPizza" src="src/Tokyo.jpg" alt="photo
+                    <img class="photoPizza" src="src/Tokyo.png" alt="photo
                             de la pizza Tokyo">
                     <div class="legende">
                         <h4>TOKYO</h4>
@@ -180,7 +180,7 @@
             </div>
             <div class="conteneurs">
                 <div id="Rio">
-                    <img class="photoPizza" src="src/Rio.jpg" alt="photo
+                    <img class="photoPizza" src="src/Rio.png" alt="photo
                             de la pizza Rio">
                     <div class="legende">
                         <h4>RIO</h4>
@@ -194,7 +194,7 @@
             </div>
             <div class="conteneurs">
                 <div id="Nairobi">
-                    <img class="photoPizza" src="src/Nairobi.jpg" alt="photo
+                    <img class="photoPizza" src="src/Nairobi.png" alt="photo
                             de la pizza Nairobi">
                     <div class="legende">
                         <h4>NAIROBI</h4>
