--- a/index.html
+++ b/index.html
@@ -358,8 +358,8 @@
                 <li>Soda 33cl</li>
                 <li>San Pellegrino 50cl</li>
                 <li>San Pellegrino 1L</li>
-                <li>Limonade artisanales<br> ABBONDIO 27,5cl</li>
-                <li>Thés artisanales<br> ABBONDIO 27,5cl</li>
+                <li>Limonade artisanale</li>
+                <li>Thé artisanales</li>
                 <li>Café</li>
             </ul>
         </div>
@@ -379,7 +379,7 @@
         <div id="maps">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2829.0613629677364!2d-0.5613814844633095!3d44.840683679098554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd55262de577d073%3A0x17a273425b1e48b9!2sPl.%20de%20Stalingrad%2C%2033100%20Bordeaux!5e0!3m2!1sfr!2sfr!4v1632901047191!5m2!1sfr!2sfr"
-                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                 style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
 
         <form id="contactForm" method="post" action="">
