--- a/index.html
+++ b/index.html
@@ -384,9 +384,9 @@
 
         <form id="contactForm" method="post" action="">
             <h2>Contactez nous</h2>
-            <label for="lastname">Nom * :</label>
+            <label for="lastName">Nom * :</label>
             <input type="text" id="lastName" name="lastName" value="" />
-            <label for="firstname">Prénom * :</label>
+            <label for="firstName">Prénom * :</label>
             <input type="text" id="firstName" name="firstName" value="" />
             <label for="email">Email * :</label>
             <input type="email" id="email" name="email" value="">
