add shadow navbar + fix bug w3c

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -382,7 +382,7 @@
                  style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
 
-        <form id="contactForm" method="post" action="">
+        <form id="contactForm" method="post">
             <h2>Contactez nous</h2>
             <label for="lastName">Nom * :</label>
             <input type="text" id="lastName" name="lastName" value="" />
